# AssistantAiEasy

./: README.md
knowledgehub/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.enterprise.yml  docker-compose.yml  pyproject.toml
knowledgehub/.github/workflows/: ci.yml
knowledgehub/docs/: ADMIN_GUIDE.md  API_REFERENCE.md  ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  INSTALLATION.md  MIGRATION.md  OPEN_WEBUI_SETUP.md  PROXY_MODE.md  README.md  TROUBLESHOOTING.md  USER_GUIDE.md
knowledgehub/pipelines/: knowledgehub_pipeline.py
knowledgehub/scripts/: backup.py  health_check.py  init_db.py  migrate.py  seed_rules.py  setup_openwebui.sh
knowledgehub/scripts/migrate_enterprise/: 00_pre_check.py  01_backup_current.py  02_migrate_database.py  03_migrate_vectorstore.py  04_update_config.py  05_validate.py  __init__.py  rollback.py  run_migration.py
knowledgehub/src/admin/: dependencies.py  main.py
knowledgehub/src/config/: logging.py  settings.py
knowledgehub/src/detection/: __init__.py  action_registry.py  engine.py  rules.py  triggers.py
knowledgehub/src/enterprise/: __init__.py  audit.py  auth.py  backup.py  clustering.py  monitoring.py  multitenancy.py
knowledgehub/src/gateway/: main.py
knowledgehub/src/knowledge/: __init__.py  embeddings.py  models.py  service.py  vectorstore.py
knowledgehub/src/llm/: __init__.py  base.py  factory.py  models.py  ollama.py  prompts.py  rag.py  vllm.py
knowledgehub/src/shared/: __init__.py  database.py  exceptions.py  models.py  (+1 more)
knowledgehub/tests/: conftest.py
(+61 files in other folders)
